--- a/gamescrapesite/gamescrape/templates/contactus.html
+++ b/gamescrapesite/gamescrape/templates/contactus.html
@@ -1,13 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 
 <head>
     <title>GameScrape - Concact Us</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body>
     <header>
-        <img id="logo" src="img/vg.jpg" alt="Placeholder Logo">
+        <a href="{% url 'index' %}"><img id="logo" src="{% static 'img/vg.jpg' %}" alt="Placeholder Logo"></a>
         <div>
             <h1>GameScrape</h1>
             <h2>Never Pay Too Much Again!</h2>
@@ -18,9 +19,9 @@
     </main>
     <footer>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="aboutus.html">About Us</a> |
-            <a href="contactus.html">Contact Us</a>
+            <a href="{% url 'index' %}">Home</a> |
+            <a href="{% url 'aboutus' %}">About Us</a> |
+            <a href="{% url 'contactus' %}">Contact Us</a>
         </nav>
         <p>&copy; 2020 GameScrape LLC</p>
     </footer>
