full database integration into zelda.html

--- a/gamescrapesite/gamescrape/templates/contactus.html
+++ b/gamescrapesite/gamescrape/templates/contactus.html
@@ -15,7 +15,9 @@
         </div>
     </header>
     <main>
-
+        <h1>Contact Us</h1>
+        <p>Address:</p>
+        <address>2603 Frostwood Dr<br>Austintown, OH 44515</address>
     </main>
     <footer>
         <nav>
