--- a/gamescrapesite/gamescrape/templates/index.html
+++ b/gamescrapesite/gamescrape/templates/index.html
@@ -20,7 +20,7 @@
                 <img src="{% static 'img/zelda.jpg' %}" alt="Placeholder Item">
                 <h3>The Legend of Zelda: Breath of the Wild</h3>
             </a>
-            <p>Current Price: </p>
+            <p>Current Price: {{ games.1.lowestprice }}</p>
             <a href="https://smile.amazon.com">Buy it here!</a>
         </div>
         <div class="game"><br>
