--- a/gamescrapesite/gamescrape/templates/index.html
+++ b/gamescrapesite/gamescrape/templates/index.html
@@ -8,53 +8,22 @@
 
 <body>
     <header>
-        <img id="logo" src="{% static 'img/vg.jpg' %}" alt="Placeholder Logo">
         <div>
             <h1>GameScrape</h1>
             <h2>Never Pay Too Much Again!</h2>
         </div>
     </header>
     <main>
+        {% for game in games %}
         <div class="game"><br>
-            <a href="{% url 'zelda' %}">
-                <img src="{% static 'img/zelda.jpg' %}" alt="Placeholder Item">
-                <h3>The Legend of Zelda: Breath of the Wild</h3>
+            <a href="{% url 'details' slug=game.slug %}">
+                <img src="{{ game.cover.url }}" alt="{{ game.title }}">
+                <h3>{{ game.title }}</h3>
             </a>
-            <p>Current Price: {{ games.1.lowestprice }}</p>
-            <a href="https://smile.amazon.com">Buy it here!</a>
+            <p>Current Price: {{ game.lowestprice }}</p>
+            <a href="{{ game.lowesturl }}">Buy it here!</a>
         </div>
-        <div class="game"><br>
-            <a href="game1.html">
-                <img src="{% static 'img/vg.jpg' %}" alt="Placeholder Item">
-                <h3>Game 2</h3>
-            </a>
-            <p>Current Price: </p>
-            <a href="https://smile.amazon.com">Buy it here!</a>
-        </div>
-        <div class="game"><br>
-            <a href="game1.html">
-                <img src="{% static 'img/vg.jpg' %}" alt="Placeholder Item">
-                <h3>Game 3</h3>
-            </a>
-            <p>Current Price: </p>
-            <a href="https://smile.amazon.com">Buy it here!</a>
-        </div>
-        <div class="game"><br>
-            <a href="game1.html">
-                <img src="{% static 'img/vg.jpg' %}" alt="Placeholder Item">
-                <h3>Game 4</h3>
-            </a>
-            <p>Current Price: </p>
-            <a href="https://smile.amazon.com">Buy it here!</a>
-        </div>
-        <div class="game"><br>
-            <a href="game1.html">
-                <img src="{% static 'img/vg.jpg' %}" alt="Placeholder Item">
-                <h3>Game 5</h3>
-            </a>
-            <p>Current Price: </p>
-            <a href="https://smile.amazon.com">Buy it here!</a>
-        </div>
+        {% endfor %}
     </main>
     <footer>
         <nav>
